tests/NormalTests/paczka1/fuzzy1/36931583.err
Error in line 1: uKp1eIJV7Yc A490 28,3
Error in line 4: uKp1eIJV7Yc A713 31,2
Error in line 5: akn7Bfk A682 55,4
Error in line 7: gQm5QozsT A713 64,8
Error in line 12: akn7Bfk A713 57,1
Error in line 13: A763 A713 96,1
Error in line 18: A763 A490 43,5
Error in line 29: OJcjEwK A713 96,8
Error in line 30: 3vrjnw A490 81,0
Error in line 39: A763 A713 8,7
